--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -590,7 +590,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2110it [01:49, 22.11it/s]"
+      "3554it [03:03, 19.94it/s]c:\\Users\\yashr\\anaconda3\\envs\\audioclf\\lib\\site-packages\\librosa\\core\\spectrum.py:257: UserWarning: n_fft=2048 is too large for input signal of length=1323\n",
+      "  warnings.warn(\n",
+      "8325it [06:54, 25.60it/s]c:\\Users\\yashr\\anaconda3\\envs\\audioclf\\lib\\site-packages\\librosa\\core\\spectrum.py:257: UserWarning: n_fft=2048 is too large for input signal of length=1103\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\yashr\\anaconda3\\envs\\audioclf\\lib\\site-packages\\librosa\\core\\spectrum.py:257: UserWarning: n_fft=2048 is too large for input signal of length=1523\n",
+      "  warnings.warn(\n",
+      "8732it [07:12, 20.17it/s]\n"
      ]
     }
    ],
@@ -609,9 +615,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[-217.35526, 70.22338, -130.38527, -53.282898,...</td>\n",
+       "      <td>dog_bark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[-424.09818, 109.34077, -52.919525, 60.86475, ...</td>\n",
+       "      <td>children_playing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[-458.79114, 121.38419, -46.52066, 52.00812, -...</td>\n",
+       "      <td>children_playing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[-413.89984, 101.66373, -35.42945, 53.036354, ...</td>\n",
+       "      <td>children_playing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[-446.60352, 113.68541, -52.402214, 60.302044,...</td>\n",
+       "      <td>children_playing</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             feature             class\n",
+       "0  [-217.35526, 70.22338, -130.38527, -53.282898,...          dog_bark\n",
+       "1  [-424.09818, 109.34077, -52.919525, 60.86475, ...  children_playing\n",
+       "2  [-458.79114, 121.38419, -46.52066, 52.00812, -...  children_playing\n",
+       "3  [-413.89984, 101.66373, -35.42945, 53.036354, ...  children_playing\n",
+       "4  [-446.60352, 113.68541, -52.402214, 60.302044,...  children_playing"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### converting extracted_features to Pandas dataframe\n",
     "extracted_features_df=pd.DataFrame(extracted_features,columns=['feature','class'])\n",
@@ -620,7 +695,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extracted_features_df.to_csv('artifacts/preprocessed_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,9 +715,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8732, 40)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "X.shape"
@@ -641,12 +736,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['dog_bark', 'children_playing', 'children_playing', ...,\n",
+       "       'car_horn', 'car_horn', 'car_horn'], dtype='<U16')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Label Encoding\n",
+    "y=np.array(pd.get_dummies(y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8732, 10)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Train Test Split\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2,random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.3110471e+02,  1.1250591e+02, -2.2574696e+01, ...,\n",
+       "         3.2466526e+00, -1.3690238e+00,  2.7557547e+00],\n",
+       "       [-1.3670342e+01,  9.1085083e+01, -7.7927332e+00, ...,\n",
+       "        -3.2530503e+00, -5.2774525e+00, -1.5569715e+00],\n",
+       "       [-4.9871544e+01,  2.6535282e-01, -2.0500937e+01, ...,\n",
+       "         2.8545945e+00, -1.6092046e+00,  3.5248058e+00],\n",
+       "       ...,\n",
+       "       [-4.2701236e+02,  9.2623047e+01,  3.1293976e+00, ...,\n",
+       "         7.4264127e-01,  7.3349077e-01,  7.1100914e-01],\n",
+       "       [-1.4575461e+02,  1.3626578e+02, -3.3515522e+01, ...,\n",
+       "         1.4681194e+00, -2.0091701e+00, -8.8218188e-01],\n",
+       "       [-4.2103134e+02,  2.1065454e+02,  3.4906607e+00, ...,\n",
+       "        -5.3888674e+00, -3.3713605e+00, -1.5665114e+00]], dtype=float32)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6985, 40)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1747, 40)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6985, 10)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1747, 10)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
