model trainer update

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -669,42 +669,81 @@
        "      <td>[-446.60352, 113.68541, -52.402214, 60.302044,...</td>\n",
        "      <td>children_playing</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8727</th>\n",
+       "      <td>[-398.5845, 135.53496, -50.725018, 35.855907, ...</td>\n",
+       "      <td>car_horn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8728</th>\n",
+       "      <td>[-346.4742, 86.34815, -45.16857, 51.709873, -3...</td>\n",
+       "      <td>car_horn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8729</th>\n",
+       "      <td>[-303.88824, 111.35945, -45.941566, 35.87702, ...</td>\n",
+       "      <td>car_horn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8730</th>\n",
+       "      <td>[-344.11008, 125.45021, -54.903442, 34.891155,...</td>\n",
+       "      <td>car_horn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8731</th>\n",
+       "      <td>[-315.6028, 94.854805, -37.22234, 46.778263, -...</td>\n",
+       "      <td>car_horn</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>8732 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             feature             class\n",
-       "0  [-217.35526, 70.22338, -130.38527, -53.282898,...          dog_bark\n",
-       "1  [-424.09818, 109.34077, -52.919525, 60.86475, ...  children_playing\n",
-       "2  [-458.79114, 121.38419, -46.52066, 52.00812, -...  children_playing\n",
-       "3  [-413.89984, 101.66373, -35.42945, 53.036354, ...  children_playing\n",
-       "4  [-446.60352, 113.68541, -52.402214, 60.302044,...  children_playing"
+       "                                                feature             class\n",
+       "0     [-217.35526, 70.22338, -130.38527, -53.282898,...          dog_bark\n",
+       "1     [-424.09818, 109.34077, -52.919525, 60.86475, ...  children_playing\n",
+       "2     [-458.79114, 121.38419, -46.52066, 52.00812, -...  children_playing\n",
+       "3     [-413.89984, 101.66373, -35.42945, 53.036354, ...  children_playing\n",
+       "4     [-446.60352, 113.68541, -52.402214, 60.302044,...  children_playing\n",
+       "...                                                 ...               ...\n",
+       "8727  [-398.5845, 135.53496, -50.725018, 35.855907, ...          car_horn\n",
+       "8728  [-346.4742, 86.34815, -45.16857, 51.709873, -3...          car_horn\n",
+       "8729  [-303.88824, 111.35945, -45.941566, 35.87702, ...          car_horn\n",
+       "8730  [-344.11008, 125.45021, -54.903442, 34.891155,...          car_horn\n",
+       "8731  [-315.6028, 94.854805, -37.22234, 46.778263, -...          car_horn\n",
+       "\n",
+       "[8732 rows x 2 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "### converting extracted_features to Pandas dataframe\n",
-    "extracted_features_df=pd.DataFrame(extracted_features,columns=['feature','class'])\n",
-    "extracted_features_df.head()"
+    "extracted_features_df = pd.DataFrame(extracted_features,columns=['feature','class'])\n",
+    "extracted_features_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "extracted_features_df.to_csv('artifacts/preprocessed_data.csv')"
+    "extracted_features_df.to_json('artifacts/preprocessed_data.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -724,14 +763,46 @@
        "(8732, 40)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-2.1735526e+02,  7.0223381e+01, -1.3038527e+02, ...,\n",
+       "        -1.6930530e+00, -6.1698383e-01,  3.8600540e-01],\n",
+       "       [-4.2409818e+02,  1.0934077e+02, -5.2919525e+01, ...,\n",
+       "         5.3489321e-01, -5.4468733e-01,  4.4632107e-01],\n",
+       "       [-4.5879114e+02,  1.2138419e+02, -4.6520660e+01, ...,\n",
+       "         2.0768483e+00,  1.6962967e+00, -9.6140963e-01],\n",
+       "       ...,\n",
+       "       [-3.0388824e+02,  1.1135945e+02, -4.5941566e+01, ...,\n",
+       "        -3.0292377e+00,  2.7170296e+00,  7.6197419e+00],\n",
+       "       [-3.4411008e+02,  1.2545021e+02, -5.4903442e+01, ...,\n",
+       "        -7.9082441e+00, -1.6414586e+00,  5.6668439e+00],\n",
+       "       [-3.1560281e+02,  9.4854805e+01, -3.7222340e+01, ...,\n",
+       "         6.1386454e-01, -1.1449189e+01, -6.0105853e+00]], dtype=float32)"
+      ]
+     },
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "X.shape"
+    "X"
    ]
   },
   {
@@ -830,83 +901,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(6985, 40)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train.shape"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1747, 40)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_test.shape"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(6985, 10)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_train.shape"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1747, 10)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_test.shape"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
