model trainer update

--- a/research/model_development.ipynb
+++ b/research/model_development.ipynb
@@ -846,7 +846,7 @@
     }
    ],
    "source": [
-    "## Trianing my model\n",
+    "## Training my model\n",
     "from tensorflow.keras.callbacks import ModelCheckpoint\n",
     "from datetime import datetime \n",
     "\n",
